(fix) fix panel visibility

--- a/LiveSlope-frontend/src/styles/headerAndFooter.css
+++ b/LiveSlope-frontend/src/styles/headerAndFooter.css
@@ -244,8 +244,8 @@
     }
 
     .panel{
-        top: auto;
-        bottom: auto;
+        top: 50%;
+        transform: translateY(-50%);
         left: 20px;
         width: auto;
     }
